--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,25 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/centreinteret
-spring.datasource.username=root
-spring.datasource.password=
+# ===== Configuration MySQL pour Railway =====
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ===== Paramètres Hibernate/JPA =====
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-# Server Configuration
-server.port=8081
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-#spring.application.name=centreinteret
-#eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-#eureka.client.registerWithEureka=true
-#eureka.client.fetchRegistry=true
+# ===== Configuration du serveur =====
+server.port=${PORT:8081}  # Utilise le port de Railway ou 8081 par défaut
 
-# Configuration pour Gmail
+# ===== Configuration Gmail (à garder si nécessaire) =====
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=brendakoundjo88@gmail.com
 spring.mail.password=iywp clpq xjlb bxeh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-# Configuration pour Googlemap
-google.maps.api.key=AIzaSyC0WZJ6pDiz1uP7T4zilV1LQt4lac9IEKk&libraries=places
+
+# ===== Configuration Google Maps =====
+google.maps.api.key=AIzaSyC0WZJ6pDiz1uP7T4zilV1LQt4lac9IEKk
