--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,20 @@
-# ===== Configuration MySQL pour Railway =====
-spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=${MYSQLUSER}
-spring.datasource.password=${MYSQLPASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# ===== Paramètres Hibernate/JPA =====
+spring.datasource.url=jdbc:mysql://localhost:3306/centreinteret
+spring.datasource.username=root
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# Server Configuration
+server.port=8081
 
-# ===== Configuration du serveur =====
-server.port=${PORT:8081}  # Utilise le port de Railway ou 8081 par défaut
 
-# ===== Configuration Gmail (à garder si nécessaire) =====
+
+# Configuration pour Gmail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=brendakoundjo88@gmail.com
 spring.mail.password=iywp clpq xjlb bxeh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-# ===== Configuration Google Maps =====
-google.maps.api.key=AIzaSyC0WZJ6pDiz1uP7T4zilV1LQt4lac9IEKk
+# Configuration pour Googlemap
+google.maps.api.key=AIzaSyC0WZJ6pDiz1uP7T4zilV1LQt4lac9IEKk&libraries=places
